--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -12,7 +12,18 @@
         <p>Trenutno stanje na računu: {{finance.stanje}}</p>
     </div>
     <div>
+
+
+
         <!-- tuki graf narisat-->
+        <form action="/odpri-graf/" method="GET">
+            <input type="submit" value="Odpri graf">
+        </form>
+
+
+
+
+
     </div>
     <div>
         <h1>Stroški</h1>
