Dodal stroski.html in ostale manjše spremembe

--- a/views/_stanje.html
+++ b/views/_stanje.html
@@ -3,5 +3,5 @@
 % elif stanje < 0:
 <span class="tag is-large is-danger is-rounded is-light">{{stanje}} €</span>
 % else:
-<span class="tag is-large is-rounded is-light">{{stanje}} €</span>
+<span class="tag is-large is-warning is-rounded is-light">{{stanje}} €</span>
 % end
