Večje spremembe v vmesniku

--- a/views/base.html
+++ b/views/base.html
@@ -35,9 +35,9 @@
         <div class="navbar-brand">
           <span class="navbar-item">
             <span class="icon">
-              <i class="fas fa-piggy-bank"></i>
+              <a href="/stroski/" style="color:rgb(73, 73, 73)"><i class="fas fa-piggy-bank"></i>
             </span>
-            <strong style= "color: rgb(0, 207, 111);">Finance</strong>
+            <strong style= "color: rgb(0, 207, 111);">Finance</strong></a>
           </span>
         </div>
         <div class="navbar-start">
