Dokončal spletni vmesnik
Napisla razdelek za pomoč in dokončal vmesnik

--- a/views/pomoc.html
+++ b/views/pomoc.html
@@ -1,1 +1,26 @@
 % rebase('base.html', izbrani_zavihek='pomoc')
+
+<div>
+  <nav class="panel">
+    <h2 class="title panel-heading tile is-child box">Uporabnik</h2>
+    <p style="color: black; padding: 15pt;">Možnost prijave s svojim računom omogoča ohranjanje podatkov ob različnih sejah, za boljšo uporabniško izkušnjo.</p>
+    <p style="color: black; padding: 15pt;">Za pravilno delovanje datume vnašajte v formatu: 'YYYY.MM:DD', pri čemer je YYYY = leto, MM = mesec, DD = dan.</p>
+  </nav>
+  <nav class="panel">
+    <h2 class="title panel-heading tile is-child box">Stroški in dohodki</h2>
+    <p style="color: black; padding: 15pt;">V tem zavihku imate možnosti beleženja stroškov in dohodkov, prav tako pa pregled porabe po kategorijah.</p>
+  </nav>
+  <nav class="panel">
+    <h2 class="title panel-heading tile is-child box">Posojila</h2>
+    <p style="color: black; padding: 15pt;">Tukaj lahko ohranjate evidenco vseh dolgov in posojil, ki jih imate.
+        <br>Natančnejša razčlenitev: <b>Posodi</b> - posodi denar, <b>Vračila meni</b> - vrne denar, ki si ga posodil, <b>Izposodi</b>
+         - izposodi denar, <b>Vrni ostalim</b> - vrne izposojen denar.
+    </p>
+  </nav>
+  <nav class="panel">
+    <h2 class="title panel-heading tile is-child box">Graf</h2>
+    <p style="color: black; padding: 15pt;">Gumb graf, vam v novem zavihku odpre graf, ki vam omogoča natančno analizo stanja ter stroškov. 
+        Legenda vam predstavi vsebino grafa. Z <b>risanjem podokna</b> na grafu, vam ta približa željeno območje. V desnem zgornjem kotu imate meni, 
+        z opcijami (od leve proti desni): <b>shrani graf kot sliko, približaj, premakni, izberi pravokotnik/prosto obliko, približaj/oddalji in ponastavi graf.</b></p>
+  </nav>
+</div>
